fix: add role attribute to form builder macro call

--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -20,7 +20,7 @@
             </div><hr><br>
             <div class="row">
 
-                {{ macros.form_builder(field_list.commercial_details) }}
+                {{ macros.form_builder(field_list.commercial_details, "Commercial") }}
 
             </div>
             <div class="row">
