--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,3 +35,17 @@
 .signature-img {
     border: 2px solid black;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+footer {
+    margin-top: 30px;
+}
