fix: ammend titles on index tabs

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,9 @@
         <div class="card grey lighten-3">
             <div class="card-tabs">
                 <ul class="tabs tabs-fixed-width grey lighten-5">
-                    <li class="tab"><a href="#tab1" class="active">Effective Communication</a></li>
-                    <li class="tab"><a href="#tab2">All Specs</a></li>
-                    <li class="tab"><a href="#tab3">Process Simplified</a></li>
+                    <li class="tab"><a href="#tab1" class="active">Communication</a></li>
+                    <li class="tab"><a href="#tab2">Specs</a></li>
+                    <li class="tab"><a href="#tab3">Process</a></li>
                 </ul>
             </div>
             <div class="card-content">
