--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Internal New Product Development Process Application">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/style.css') }}">
@@ -68,17 +69,17 @@
         </ul>
     </header>
     <!-- flash alert messages section -->
-    <section>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %} 
+    {% with messages = get_flashed_messages() %}
+        {% if messages %} 
+            <section>
                 {% for message in messages %} 
                     <div class="row flashes light-green-text text-accent-4">
                         <h4 class="center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
-            {% endif %} 
-        {% endwith %}
-    </section>
+            </section>
+        {% endif %} 
+    {% endwith %}
     <!-- block content container -->
     <main>
         <div class="container">
