--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <div class="row">
     <div class="col s12">
         <div class="card grey lighten-3">
-            <div class="card-image">
-                <img class="activator" src="{{ url_for('static', filename='images/platter.jpg') }}">
-                <span class="card-title">Welcome to the Meade Product App.</span>
+            <div class="card-image light-green lighten-5">
+                <img class="activator home-image" src="{{ url_for('static', filename='images/smart_farm.png') }}" alt="Smart Farm Logo">
+                <span class="card-title black-text"><strong>Welcome to the Meade Product App.</strong></span>
             </div>
             <div class="card-content">
                 <span class="card-title activator">Description<i class="material-icons right">more_vert</i></span>
