fix: change colours of nav and footer, remove h5

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!-- navbar for desktop -->
-        <nav class="nav-extended green accent-3">
+        <nav class="nav-extended green darken-1">
             <div class="nav-wrapper">
                 <a href="{{ url_for('home') }}" class="brand-logo left">
                     <img src="{{ url_for('static', filename='images/meade_farm_logo.png') }}" alt="Meade Farm Logo" class="responsive-img">
@@ -89,11 +89,10 @@
         
     </main>
     <!-- footer section -->
-    <footer class="page-footer green accent-3">
+    <footer class="page-footer green darken-1">
         <div class="container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <h5>Links</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/meadefarm/" target="_blank">Facebook</a></li>
                         <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/company/meade-potato-company/" target="_blank">LinkedIn</a></li>
