--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <!-- submit button -->
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large green accent-3 center-align">
+                    <button type="submit" class="btn-large green darken-1 center-align">
                         <i class="material-icons right">check</i> Submit
                     </button>
                 </div>
