--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -294,14 +294,22 @@
                         </td>
                         {% if context == "pending" %}
                             <td>
-                                {% if product.status == "Pending - Awaiting Commercial Sign Off" and (session.role == "Commercial" or session.role == "Admin") %}
+                                {% if product.status == "Pending - Awaiting Commercial Sign Off" 
+                                    and (session.role == "Commercial" or session.role == "Admin")
+                                    and (session.department == product.department or session.department == "All") %}
                                     <a href="{{ url_for('sign_off', product_id=product._id) }}" class="btn waves-effect purple accent-3">
                                         <i class="material-icons right">border_color</i> Sign Off
                                     </a>
                                 {% else %}
-                                    <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn waves-effect blue accent-3">
-                                        <i class="material-icons right">edit</i> Add Details
-                                    </a>
+                                    {% if session.department == product.department or session.department == "All" %} 
+                                        <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn waves-effect blue accent-3">
+                                            <i class="material-icons right">edit</i> Add Details
+                                        </a>
+                                    {% else %} 
+                                        <a href="{{ url_for('my_tasks') }}" disabled class="btn waves-effect blue accent-3">
+                                            <i class="material-icons right">close</i> Not Allowed
+                                        </a>
+                                    {% endif %}
                                 {% endif %}
                             </td>
                         {% endif %}
