feat: add js file to scripts block for register template

--- a/templates/register.html
+++ b/templates/register.html
@@ -81,3 +81,6 @@
     </form>
 
 {% endblock %}
+{% block scripts %} 
+    <script src="{{ url_for('static', filename='js/register.js') }}"></script>
+{% endblock %}
